--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "firebase": "^9.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-hot-toast": "^2.3.0",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
